[project]
name = "edutech-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.6",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "openai>=2.32.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.10.2",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "reportlab==4.0.9",
    "requests>=2.33.1",
]
[tool.pytest.ini_options]
pythonpath = ["src"]